--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
      <div id="audio">
             <audio autoplay hidden loop>
-             <source src="Avatar/AppaSong.mp3" type="audio/mpeg">
+             <source src="Avatar/AvatarsLove.mp3" type="audio/mpeg">
                         If you're reading this, it is because your browser does not support the audio element
             </audio>
         </div>
