Fixed header,added box w info

--- a/index.html
+++ b/index.html
@@ -35,15 +35,26 @@
             <source src="/Avatar/VideoTesting.mp4">
         </video>
     </div>
+    
         <div class="layer1">
          <div class="SAContainer">
              <div class="SATemple">
-                <img src="/Avatar/ATLA.jpg" class="background">
-                 <h1 class="Temple">Southern Air Temple</h1>
-                 <div class="description">The Southern Air Temple, located in the remote Patola Mountain Range, is one of the four original Air Nomad temples and one of the two that traditionally housed male airbenders, 
+
+                <div class="temple-left">
+                 <div class="title" style="font-weight: 900;">Southern Air Temple</div>
+                 <div class="description" style="font-size: 2.2rem;">The Southern Air Temple, located in the remote Patola Mountain Range, is one of the four original Air Nomad temples and one of the two that traditionally housed male airbenders, 
                     the other being the Northern Air Temple. Although it used to accept pilgrims from other nations, the temple was thought to be only accessible via flying bison during Aang's 
                     lifetime. In spite of this, the Fire Nation managed to wipe out the temple's population during the Air Nomad Genocide, abruptly ending millennia of use by monks and nuns.</div>
+                    </div>
+               
+                    <div class="temple-right">
+                     <img class="temple-image" src="/Avatar/SouthernAirTemple.png">
+                      <div class="image-text">Southern Air Temple</div>
+                    </div>
+
                  </div>
+            <div class="Layer2">
+            </div>
                  <div class="SPole"> 
                  <h1 class="South-Pole">South Pole</h1>
                  <div class="description2">The Southern Air Temple, located in the remote Patola Mountain Range, is one of the four original Air Nomad temples and one of the two that traditionally housed male airbenders, 
@@ -52,6 +63,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </body>
 </html>
