--- a/index.html
+++ b/index.html
@@ -53,16 +53,35 @@
                     </div>
 
                  </div>
-            <div class="Layer2">
+            <div class="layer2">
             </div>
-                 <div class="SPole"> 
-                 <h1 class="South-Pole">South Pole</h1>
-                 <div class="description2">The Southern Air Temple, located in the remote Patola Mountain Range, is one of the four original Air Nomad temples and one of the two that traditionally housed male airbenders, 
-                    the other being the Northern Air Temple. Although it used to accept pilgrims from other nations, the temple was thought to be only accessible via flying bison during Aang's 
-                    lifetime. In spite of this, the Fire Nation managed to wipe out the temple's population during the Air Nomad Genocide, abruptly ending millennia of use by monks and nuns.</div>
-                    </div>
+
+
+                </div>
+            
+        </div> 
+
+        <div class="layer2">
+            <div class="airbenders-heading">Airbenders</div>
+            <div class="airbenders">
+                <div class="monk-gyatso">
+                    <img class="gyatso" src="/Avatar/Monk_Gyatso.png">
+                    <div class="gyatso-text">Monk Gyatso</div>
+                <div class="yangchen">
+                    <img class="avatar-yangchen" src="/Avatar/Yangchen.jpg">
+                    <div class="yang-text">Avatar Yangchen</div>
+                <div class="pasang">
+                    <img class="pasang-img" src="/Avatar/Pasang.png">
+                    <div class="pasang-text">Pasang</div>
+                <div class="jinju">
+                    <img class="jinju-img" src="/avatar/jinju.png">
+                    <div class="jinju-text">Jinju</div>
+                </div>
+                </div>
+                </div>
                 </div>
             </div>
-        </div> 
+        </div>
+
     </body>
 </html>
