Added airbenders list

--- a/index.html
+++ b/index.html
@@ -62,26 +62,33 @@
         </div> 
 
         <div class="layer2">
-            <div class="airbenders-heading">Airbenders</div>
+            <div class="l2heading">
+                <div class="airbenders-heading">Airbenders</div>
             <div class="airbenders">
                 <div class="monk-gyatso">
-                    <img class="gyatso" src="/Avatar/Monk_Gyatso.png">
+                    <img class="gyatso" src="/Avatar/Monk_Gyatso.png" style="height: 100%;width: 200px;">
                     <div class="gyatso-text">Monk Gyatso</div>
                 </div>
                 <div class="yangchen">
-                    <img class="avatar-yangchen" src="/Avatar/Yangchen.jpg">
+                    <img class="avatar-yangchen" src="/Avatar/Yangchen.png" style="height: 100%;width: 200px;">
                     <div class="yang-text">Avatar Yangchen</div>
                 </div>
                 <div class="pasang">
-                    <img class="pasang-img" src="/Avatar/Pasang.png">
+                    <img class="pasang-img" src="/Avatar/Pasang.png" style="height: 100%;width: 200px;">
                     <div class="pasang-text">Pasang</div>
                 </div>
                 <div class="jinju">
-                    <img class="jinju-img" src="/avatar/jinju.png">
+                    <img class="jinju-img" src="/avatar/jinju.png" style="height: 100%;width: 200px;">
                     <div class="jinju-text">Jinju</div>
                 </div>
             </div>
+            </div>
         </div>
+
+        <div class="description" style="font-size: 2.2rem;">The Southern Air Temple, located in the remote Patola Mountain Range, is one of the four original Air Nomad temples and one of the two that traditionally housed male airbenders, 
+            the other being the Northern Air Temple. Although it used to accept pilgrims from other nations, the temple was thought to be only accessible via flying bison during Aang's 
+            lifetime. In spite of this, the Fire Nation managed to wipe out the temple's population during the Air Nomad Genocide, abruptly ending millennia of use by monks and nuns.</div>
+            </div>
 
     </body>
 </html>
