--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
             </div>
         </div>
 
-        <div class="description2" style="font-size: 2.2rem;">The Southern Air Temple, located in the remote Patola Mountain Range, is one of the four original Air Nomad temples and one of the two that traditionally housed male airbenders, 
-            the other being the Northern Air Temple. Although it used to accept pilgrims from other nations, the temple was thought to be only accessible via flying bison during Aang's 
-            lifetime. In spite of this, the Fire Nation managed to wipe out the temple's population during the Air Nomad Genocide, abruptly ending millennia of use by monks and nuns.</div>
+        <div class="layer3">
+            <div class="l3heading">
+                <div class="firebenders-heading">Firebenders</div>
             </div>
-
+        </div>
+        
     </body>
 </html>
