finished firebenders and added quote

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
             </div>
         </div>
 
-            <div class="layer3">
-                <div class="fire-container">
+            <div class="fire-container">
                     <div class="crescent-island">
        
                        <div class="crescent-left">
@@ -103,7 +102,6 @@
         <div class="layer4">
             <div class="l4heading">
                 <div class="firebenders-heading">Firebenders</div>
-                </div>
                 <div class="firebenders">
                   <div class="azula">
                     <img class="azula-img" src="/Avatar/azula_gif.gif" style="height: 100%;width: 200px;">
@@ -122,7 +120,18 @@
                     <div class="ozai-text">Ozai</div>
                   </div>
                 </div>
+            </div>
         </div>
         
+        <div class="quote">
+            <div class="whole-quote">
+            <div class="quote-says">
+                “Sometimes life is like this dark tunnel. You cant always see the light at the end of the tunnel, but if you just keep moving... you will come to a better place.”</div>
+            <div class="name">-Uncle Iroh</div> 
+        </div>
+        </div>
+
+
+
     </body>
 </html>
