--- a/index.html
+++ b/index.html
@@ -131,7 +131,15 @@
         </div>
         </div>
 
-
+         <div class="link">
+            <div class="song-lyrics">
+                <div class="secret" style="font-weight: 900;">Secret tunnel</div>
+                <div class="lyrics">Secret tunnel, secret tunnel through the mountain secret, secret, secret, secret tunnel!</div>
+            </div>
+            <div class="video">
+                <a class="song-link" href="https://youtu.be/7o4EI_-5reA?t=39">Click Me!</a>
+            </div>
+        </div> 
 
     </body>
 </html>
