finished, added footer with a click me button to a song

--- a/index.html
+++ b/index.html
@@ -141,5 +141,9 @@
             </div>
         </div> 
 
+        <div class="footer">
+            <div class="copyrigh">Website by: Alourne</div>
+        </div>
+
     </body>
 </html>
