Changed the header to .pngs

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <ul class="right">
                     <li><img src="/Avatar/Air.png" alt="Air" style="float:left;width:40px;min-height:40;"></li>
                     <li><a class="icons" href="#" style="color: #fcfcfc;">Home</a></li>
-                    <li><img src="/Avatar/Water.ico" alt="Water" style="float:left;width:40px;min-height:40;"></li>
+                    <li><img src="/Avatar/Water.png" alt="Water" style="float:left;width:40px;min-height:40;"></li>
                     <li><a class="icons" href="#" style="color: #3671dd;">Characters</a></li>
-                    <li><img src="/Avatar/Earth.ico" alt="Earth" style="float:left;width:40px;min-height:40;"></li>
+                    <li><img src="/Avatar/Earth.png" alt="Earth" style="float:left;width:40px;min-height:40;"></li>
                     <li><a class="icons" href="#" style="color: red;">FAQ</a></li>
-                    <li><img src="/Avatar/Fire.ico" alt="Fire" style="float:left;width:40px;min-height:40;"></li>
+                    <li><img src="/Avatar/Fire.png" alt="Fire" style="float:left;width:40px;min-height:40;"></li>
                  <li><a class="icons" href="#" style="color: rgb(12, 190, 12);">About</a></li>
                 </ul>
         </nav>
