--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="pasang-text">Pasang</div>
                 </div>
                 <div class="jinju">
-                    <img class="jinju-img" src="avatar/jinju.png" style="height: 100%;width: 200px;">
+                    <img class="jinju-img" src="Avatar/jinju.png" style="height: 100%;width: 200px;">
                     <div class="jinju-text">Jinju</div>
                 </div>
             </div>
